--- a/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <img src="../../../assets/fotoperfil.png" class="img-responsive" id="fotoperfil">
+    </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <p>{{persona.nombre}} {{persona.apellido}}</p>
         <p>Full Stack Developer Jr</p>
