--- a/FrontEnd/src/app/components/hys/hys.component.css
+++ b/FrontEnd/src/app/components/hys/hys.component.css
@@ -1,5 +1,10 @@
 .row{
     background-color: #a6a6a6;
     padding: 20px;
-    
+}
+
+.circulo{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
