--- a/FrontEnd/src/app/components/hys/hys.component.html
+++ b/FrontEnd/src/app/components/hys/hys.component.html
@@ -1,8 +1,12 @@
 <div class="row">
-    <div id="hands"><h1>Hard & Soft Skills</h1></div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
+
+    <h1>Hard & Soft Skills</h1>
+    <div class="col-lg-2">
+        <button type="button" routerLink="/newskill" class="btn btn-dark" *ngIf="isLogged">Nueva Skill</button>
+    </div>
+    <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo" *ngFor="let skill of skill">
         <circle-progress
-            [percent]="75"
+            [percent]="(skill.porcentaje)"
             [space]="-10"
             [outerStrokeGradient]="true"
             [outerStrokeWidth]="10"
@@ -10,8 +14,10 @@
             [outerStrokeColor]="'#5271FF'"
             [outerStrokeGradientStopColor]="'#004AAD'"
             [innerStrokeColor]="'silver'"
-            [imageSrc]="'../assets/html.png'"
-            [showImage]="true"
+            [imageSrc]="''"
+            [title]="(skill.nombre)"
+            [showTitle]="true"
+            [showImage]="false"
             [imageHeight]="70"
             [imageWidth]="70"
             [animateTitle]="false"
@@ -22,120 +28,17 @@
             [startFromZero]="false"
             [lazy]="true"
         ></circle-progress>
+
+        <div>
+            <td *ngIf="isLogged">
+                <button class="btn btn-light" routerLink="/editskill/{{skill.id}}">
+                    <i class="bi bi-pencil-fill"></i></button>
+            </td>
+            <td *ngIf="isLogged">
+                <button class="btn btn-danger" (click)="delete(skill.id)">
+                    <i class="bi bi-trash-fill"></i></button>
+            </td>
+        </div>
+
     </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-            [percent]="90"
-            [space]="-10"
-            [outerStrokeGradient]="true"
-            [outerStrokeWidth]="10"
-            [innerStrokeWidth]="10"
-            [outerStrokeColor]="'#5271FF'"
-            [outerStrokeGradientStopColor]="'#004AAD'"
-            [innerStrokeColor]="'silver'"
-            [imageSrc]="'../assets/js.png'"
-            [showImage]="true"
-            [imageHeight]="60"
-            [imageWidth]="60"
-            [animateTitle]="false"
-            [animationDuration]="1000"
-            [showUnits]="false"
-            [showBackground]="false"
-            [clockwise]="false"
-            [startFromZero]="false"
-            [lazy]="true"
-        ></circle-progress>
-    </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-            [percent]="65"
-            [space]="-10"
-            [outerStrokeGradient]="true"
-            [outerStrokeWidth]="10"
-            [innerStrokeWidth]="10"
-            [outerStrokeColor]="'#5271FF'"
-            [outerStrokeGradientStopColor]="'#004AAD'"
-            [innerStrokeColor]="'silver'"
-            [imageSrc]="'../assets/css.png'"
-            [showImage]="true"
-            [imageHeight]="70"
-            [imageWidth]="70"
-            [animateTitle]="false"
-            [animationDuration]="1000"
-            [showUnits]="false"
-            [showBackground]="false"
-            [clockwise]="false"
-            [startFromZero]="false"
-            [lazy]="true"
-        ></circle-progress>
-    </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-            [percent]="60"
-            [space]="-10"
-            [outerStrokeGradient]="true"
-            [outerStrokeWidth]="10"
-            [innerStrokeWidth]="10"
-            [outerStrokeColor]="'#FF914D'"
-            [outerStrokeGradientStopColor]="'#FF5757'"
-            [innerStrokeColor]="'silver'"
-            [imageSrc]="'../assets/eng.png'"
-            [showImage]="true"
-            [imageHeight]="70"
-            [imageWidth]="70"
-            [animateTitle]="false"
-            [animationDuration]="1000"
-            [showUnits]="false"
-            [showBackground]="false"
-            [clockwise]="false"
-            [startFromZero]="false"
-            [lazy]="true"
-        ></circle-progress>
-    </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-            [percent]="95"
-            [space]="-10"
-            [outerStrokeGradient]="true"
-            [outerStrokeWidth]="10"
-            [innerStrokeWidth]="10"
-            [outerStrokeColor]="'#FF914D'"
-            [outerStrokeGradientStopColor]="'#FF5757'"
-            [innerStrokeColor]="'silver'"
-            [imageSrc]="'../assets/grupal.png'"
-            [showImage]="true"
-            [imageHeight]="70"
-            [imageWidth]="70"
-            [animateTitle]="false"
-            [animationDuration]="1000"
-            [showUnits]="false"
-            [showBackground]="false"
-            [clockwise]="false"
-            [startFromZero]="false"
-            [lazy]="true"
-        ></circle-progress>
-    </div>
-    <div class="text-center col-sm-4 col-md-4 col-lg-4">
-        <circle-progress
-            [percent]="55"
-            [space]="-10"
-            [outerStrokeGradient]="true"
-            [outerStrokeWidth]="10"
-            [innerStrokeWidth]="10"
-            [outerStrokeColor]="'#FF914D'"
-            [outerStrokeGradientStopColor]="'#FF5757'"
-            [innerStrokeColor]="'silver'"
-            [imageSrc]="'../assets/git.png'"
-            [showImage]="true"
-            [imageHeight]="70"
-            [imageWidth]="70"
-            [animateTitle]="false"
-            [animationDuration]="1000"
-            [showUnits]="false"
-            [showBackground]="false"
-            [clockwise]="false"
-            [startFromZero]="false"
-            [lazy]="true"
-        ></circle-progress>
-    </div>    
 </div>
