--- a/FrontEnd/src/app/components/acerca-de/acerca-de.component.css
+++ b/FrontEnd/src/app/components/acerca-de/acerca-de.component.css
@@ -8,12 +8,14 @@ div{
 /*Estilo de la foto de perfil*/
 @media (min-width: 576px){
     #fotoperfil{
-        position: absolute;
-        width: 15%;
         border-radius: 25%;
         box-shadow: 3px 3px 3px whitesmoke;
-        left: 3%;
-        top:1008px;
+    }
+
+    .descripcion{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 @media (max-width: 575px){
