--- a/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -1,9 +1,8 @@
-<div class="row">   
-    <div class="col-lg-2">
-        <button type="button" class="btn btn-dark" routerLink="/editacercade/1" *ngIf="isLogged">
-            Editar persona
-        </button>
-    </div>
+<div>
+    <button type="button" class="btn btn-dark" routerLink="/editacercade/1" *ngIf="isLogged">
+        Editar persona
+    </button>
+</div>
 <div class="row" *ngIf="persona">
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <img src={{persona.img}} class="img-fluid" id="fotoperfil">
